<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="currency">Currency</string>
    <string name="from">From</string>
    <string name="country">Country</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="converter">Converter</string>
</resources>